# kagou

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE.txt  Makefile  PROJECT.md  README.md  TODO.md  package-lock.json  package.json  playwright.config.js  test.html
.cline/: README.md
.github/workflows/: test.yml
cert/: server.crt  server.key
e2e/: https.spec.js  server.spec.js
src/: main.c  request.c  request.h  request_handler.c  request_handler.h  response.c  response.h  util.c  util.h
test/: test.css  test.csv  test.html  test.js  test.json
tests/: test.c  test_keepalive_improved.py  test_request_validation  test_request_validation.c  test_sigterm.sh
